Bug: 102896 - localization check-ins for 8.7.0
Updates from HTP.

https://bugzilla.zimbra.com/show_bug.cgi?id=102896

Copied from Perforce
 Change: 562022

--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -2731,7 +2731,7 @@ Q_Delete_RetentionPolicy_Confirm = Sie sind im Begriff, eine Aufbewahrungsregel 
 LBL_Policy_Name = Regelname:
 LBL_Policy_Retention = Aufbewahrungszeitraum:
 LBL_Policy_Purge = L\u00f6schschwellenwert:
-LBL_POLICY_COS_INHERIT_PROMPT = Regeln auf COS-Ebene aktivieren, anstatt von der Regel zu erben, die in ''Globale Einstellungen'' definiert ist.
+LBL_POLICY_COS_INHERIT_PROMPT = Regeln auf COS-Ebene aktivieren, statt von der in ''Globale Einstellungen'' definierten Regel zu erben.
 TTL_Policy_Add = Aufbewahrungsregel hinzuf\u00fcgen
 TTL_Policy_Edit = Aufbewahrungsregel bearbeiten
 ERROR_EmptyRPName = Geben Sie einen Regelnamen an.
