--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -1353,7 +1353,7 @@ LBL_zimbraFeatureBriefcasesEnabled = Valigetta
 LBL_zimbraFeatureHtmlComposeEnabled = Composizione HTML
 LBL_zimbraFeatureChatEnabled = Chat
 LBL_zimbraFeatureInstantNotify = Notifiche istantanee
-LBL_zimbraPrefIMAutoLogin = Entra automaticamente nei servizi di messaggeria istantanea
+LBL_zimbraPrefIMAutoLogin = Entra automaticamente nei servizi di messaggistica istantanea
 NAD_Feature = Funzione: 
 LBL_zimbraFeatureViewInHtmlEnabled = Visualizzazione allegati come HTML
 LBL_zimbraFeatureGalEnabled = Accesso all'indirizzario globale GAL
