--- a/WebRoot/messages/ZabMsg_it.properties
+++ b/WebRoot/messages/ZabMsg_it.properties
@@ -61,7 +61,7 @@ aboutScreenCopyright = Copyright \u00a9 2005-{0} Telligent Systems, Inc. All rig
 splashScreenCopyright = Copyright \u00a9 2005-{0} Telligent Systems, Inc. All rights reserved. Telligent and \
   Zimbra are registered trademarks or trademarks of Telligent Systems, Inc.
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> :: il leader per le soluzioni di messaggeria e collaborazione open source \
+clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> :: il leader per le soluzioni di messaggistica e collaborazione open source \
     <a target="_new" href="http://blog.zimbra.com">Blog</a> - \
     <a target="_new" href="http://wiki.zimbra.com">Wiki</a> - \
     <a target="_new" href="http://www.zimbra.com/forums">Forum</a>
