Bug 102896,80381,103148  Bug 102896 - localization check-ins for 8.7.0  Bug 80381 - [INTL] Message which is shown after editing Task list is in English  Bug 103148 - The Indonesian language name written in Indonesian is missing on the English locale
Updated translations for our base 30 languages, except Japanese.

For Bug 80381, the key "actionTaskListModified" was added to each ZimbraWebClient/WebRoot/messages/ZhMsg_*.properties file.
For Bug 103148, the key "id" and "in" in the ZimbraServer/conf/msgs/L10nMsg.properties was updated.

https://bugzilla.zimbra.com/show_bug.cgi?id=102896
https://bugzilla.zimbra.com/show_bug.cgi?id=80381
https://bugzilla.zimbra.com/show_bug.cgi?id=103148

Copied from Perforce
 Change: 563041

--- a/WebRoot/messages/ZaMsg_fr_CA.properties
+++ b/WebRoot/messages/ZaMsg_fr_CA.properties
@@ -1562,7 +1562,7 @@ Wednesday = Mercredi
 Thursday = Jeudi
 Friday = Vendredi
 Saturday = Samedi
-LBL_zimbraPrefCalendarUseQuickAdd = Pour cr\u00e9er un rendez-vous, utilisez la bo\u00eete de dialogue Ajout rapide.
+LBL_zimbraPrefCalendarUseQuickAdd = Pour cr\u00e9er un rendez-vous, utilisez la bo\u00eete de dialogue Ajout rapide
 LBL_zimbraPrefCalendarAlwaysShowMiniCal = Toujours afficher le mini-calendrier
 NAD_UserServicesEnabled = Service de messagerie
 NAD_Enabled = Activ\u00e9
