Bug 102896 - localization check-ins for 8.7.0
S36 update - ZimbraServer/... and ZimbraWebClient/...

https://bugzilla.zimbra.com/show_bug.cgi?id=102896

Copied from Perforce
 Change: 565039

--- a/WebRoot/messages/ZaMsg_fr.properties
+++ b/WebRoot/messages/ZaMsg_fr.properties
@@ -338,7 +338,7 @@ bothNewPasswordsMustMatch = Les deux nouveaux mots de passe ne sont pas identiqu
 errorPassRecentlyUsed = Le mot de passe que vous avez entr\u00e9 a \u00e9t\u00e9 utilis\u00e9 r\u00e9cemment. Veuillez en choisir un autre.
 errorPassChangeTooSoon = \
 Le mot de passe ne peut pas \u00eatre chang\u00e9 pr\u00e9matur\u00e9ment.
-errorPassLocked = Password locked. User not allowed to change password. Please contact your System Administrator.
+errorPassLocked = Mot de passe verrouill\u00e9. Cet utilisateur n'est pas autoris\u00e9 \u00e0 changer son mot de passe. Contactez votre administrateur syst\u00e8me.
 Domain_GAL_Config_Complete = La configuration de recherche GAL a \u00e9t\u00e9 effectu\u00e9e.
 Domain_GAL_ConfigSummary = R\u00e9sum\u00e9 des param\u00e8tres de recherche GAL
 Domain_GALTestSettings = Tester
@@ -1810,7 +1810,7 @@ ERROR_TARGET_DOMAIN_IS_ALIAS = Le domaine cible doit \u00eatre un domaine local.
 ERROR_DOMAIN_ALIAS_NOT_EXIST = Vous devez sp\u00e9cifier l'alias de domaine.
 
 
-WARNING_REINDEX = ATTENTION\u00a0: la r\u00e9indexation de la bo\u00eete aux lettres d'un utilisateur prend un certain temps (et ne peut pas \u00eatre d\u00e9faite).Par ailleurs, si la r\u00e9indexation est interrompue avant d'\u00eatre termin\u00e9e, l'index sera incomplet et les recherches seront moins efficaces.	
+WARNING_REINDEX = ATTENTION\u00a0: la r\u00e9indexation de la bo\u00eete aux lettres d'un utilisateur prend un certain temps (et ne peut pas \u00eatre d\u00e9faite). Par ailleurs, si la r\u00e9indexation est interrompue avant d'\u00eatre termin\u00e9e, l'index sera incomplet et les recherches seront moins efficaces.	
 WARNING_WAIT_Q_SCAN = Le serveur analyse les files d'attente de messagerie. <br> Pendant la num\u00e9risation, vous pouvez continuer \u00e0 utiliser l'interface, mais vous risquez de constater certaines lenteurs.
 ERROR_ACCOUNT_EXISTS = Le nom existe d\u00e9j\u00e0 dans une liste de distribution, un alias, une ressource ou un compte. Veuillez choisir un autre nom.
 ERROR_COS_EXISTS = Cette Classe de Service existe d\u00e9j\u00e0.  Veuillez choisir un autre nom.
