--- a/WebRoot/messages/ZaMsg_fr_CA.properties
+++ b/WebRoot/messages/ZaMsg_fr_CA.properties
@@ -359,8 +359,8 @@ Domain_GALSampleSearchName = Vous devez pr\u00e9ciser un terme de recherche\u00a
 Domain_GALTestNoResults = La recherche n'a renvoy\u00e9 aucun r\u00e9sultat.
 LBL_zimbraDomainStatus = \u00c9tat\u00a0:
 Domain_zimbraDomainStatus = \u00c9tat du domaine
-Domain_GalConfig_Complete = La configuration du domaine de la LAG est termin\u00e9e.<br>
-	Pour enregistrer cette configuration, cliquez sur \u00ab\u00a0Termin\u00e9\u00a0\u00bb.
+Domain_GalConfig_Complete = La configuration du domaine de la LAG est termin\u00e9e.<br>\
+ Pour enregistrer cette configuration, cliquez sur \u00ab\u00a0Termin\u00e9\u00a0\u00bb.
 Domain_Auth_Config_Complete = L\u2019authentification du domaine a \u00e9t\u00e9 configur\u00e9e.<br>Pour enregistrer cette configuration, cliquez sur \u00ab\u00a0Termin\u00e9\u00a0\u00bb.
 Domain_Config_Complete = \
 	La configuration du nouveau domaine est termin\u00e9e.<br>\
@@ -696,7 +696,7 @@ Alert_GlobalConfig = \
     Les param\u00e8tres s'appliquent uniquement aux serveurs sur lesquels le  ou les services appropri\u00e9s\
  ont \u00e9t\u00e9 install\u00e9s et activ\u00e9s. Les param\u00e8tres appliqu\u00e9s aux serveurs, aux noms de domaine et aux classes de service remplacent les param\u00e8tres globaux.
 Alert_ServerRestart = \
-	<b>Attention :</b> 
+	<b>Attention :</b>\
  les modifications apport\u00e9es aux param\u00e8tres prennent effet seulement apr\u00e8s le red\u00e9marrage du serveur.
 Alert_ProxyConfig = \
     <b>Attention :</b> Pour appliquer les modifications apport\u00e9es \u00e0 ces param\u00e8tres, vous devez red\u00e9marrer le serveur proxy.
@@ -1888,7 +1888,7 @@ ERROR_DETAILS = D\u00e9tails\u00a0:
 ERROR_PARSE_LOGIN_NAME = Erreur de lecture du nom d'utilisateur
 
 ERROR_PQ_SERVICE_UNAVAILABLE = \
-	Cette file d'attente est en cours d'analyse et l'action demand\u00e9e ne peut pas s'effectuer maintenant.
+	Cette file d'attente est en cours d'analyse et l'action demand\u00e9e ne peut pas s'effectuer maintenant.\
 	Veuillez r\u00e9essayer plus tard.
 ERROR_FAILED_TO_GET_CREDENTIALS = Impossible d'obtenir les certificats du serveur.
 ERROR_CANNOT_FIND_SERVER = Le serveur {0} est introuvable.
@@ -2619,8 +2619,8 @@ MSG_NOTE_otherConfigStep = <ol><li>Le mappage de noms de compte sp\u00e9cifie le
  qui contient la partie locale du nom du compte (\u00e0 savoir, l'uid).</li> \
   <li>La mappe d'attributs mappe des valeurs d'attributs de l'entr\u00e9e externe \u00e0 des attributs de compte Zimbra. \
   Les valeurs ont le format {external attribute}={zimbra attribute}. </li>\
-  <li>Pour le provisionnement imm\u00e9diat, la taille de lot s'affiche et elle est n\u00e9cessaire pour le nombre maximal de comptes \u00e0 traiter\u00a0;
-  la fr\u00e9quence d'interrogation et les serveurs planifi\u00e9s seront \u00e9galement requis, \
+  <li>Pour le provisionnement imm\u00e9diat, la taille de lot s'affiche et elle est n\u00e9cessaire pour le nombre maximal de comptes \u00e0 traiter\u00a0;\
+ la fr\u00e9quence d'interrogation et les serveurs planifi\u00e9s seront \u00e9galement requis, \
  et seront d\u00e9finis sur les serveurs sp\u00e9cifi\u00e9s.</li></ol>
 MSG_AUTOPROV_MANUAL = <ol><li> Effectuez une recherche dans le r\u00e9pertoire source de provisionnement automatique externe et \u00e9num\u00e9rez les utilisateurs.</li> \
   <li> S\u00e9lectionnez les comptes et cliquez sur OK pour effectuer le provisionnement automatique. </li></ol>
