--- a/WebRoot/messages/ZaMsg_hi.properties
+++ b/WebRoot/messages/ZaMsg_hi.properties
@@ -835,7 +835,7 @@ NAD_Service_Policyd = Policyd
 NAD_Service_SNMP = SNMP
 NAD_Service_AntiVirus = \u090f\u0902\u091f\u0940-\u0935\u093e\u092f\u0930\u0938
 NAD_Service_AntiSpam = \u090f\u0902\u091f\u0940-\u0938\u094d\u200d\u092a\u0948\u092e
-NAD_Service_OpenDKIM = DomainKeys Identified Mail
+NAD_Service_OpenDKIM = DomainKeys \u092a\u0939\u091a\u093e\u0928\u0947 \u0917\u090f \u092e\u0947\u0932
 NAD_Service_Logger = \u0932\u0949\u0917\u0930
 NAD_Service_Spell = \u0938\u094d\u092a\u0948\u0932 \u091a\u0947\u0915\u0930
 NAD_Service_Imapproxy = \u0930\u093f\u0935\u0930\u094d\u0938 \u092a\u094d\u0930\u0949\u0915\u094d\u0938\u0940
@@ -1186,12 +1186,12 @@ NAD_AdvStatsFlashOld = \u091a\u093e\u0930\u094d\u091f\u094d\u0938 \u0926\u0947\u
 NAD_AdvStatsFlashRequired = \u091a\u093e\u0930\u094d\u091f\u094d\u0938 \u0926\u0947\u0916\u0928\u0947 \u0915\u0947 \u0932\u093f\u090f Adobe Flash \u0906\u0935\u0936\u094d\u092f\u0915 \u0939\u0948
 NAD_AdvStatsDataTip = {1} \u092a\u0930 {0}
 NAD_AdvStatsIntervalFormatMinutes = \u0905\u0902\u0924\u0930\u093e\u0932: {0} \u092e\u093f\u0928\u091f
-NAD_AdvStatsTipDateFormat = %b %e \u092a\u0930 %I:%M %p
-NAD_AdvStatsLabelDateFormat = %I:%M %p
+NAD_AdvStatsTipDateFormat = %b %e \u092a\u0930 %H:%M
+NAD_AdvStatsLabelDateFormat = %H:%M
 NAD_AdvStatsLoadingDataLabel = \u091a\u093e\u0930\u094d\u091f \u0915\u0947 \u0932\u093f\u090f \u0921\u0947\u091f\u093e \u0932\u094b\u0921 \u0915\u0930 \u0930\u0939\u093e \u0939\u0948...
 NAD_AdvStatsNoDataLabel = \u0915\u094b\u0908 \u0921\u0947\u091f\u093e \u0909\u092a\u0932\u092c\u094d\u0927 \u0928\u0939\u0940\u0902 \u0939\u0948
-NAD_AdvStatsTimeAxisLabelMonthDay = %b %e
-NAD_AdvStatsTimeAxisLabelHourMinute = %I:%M %p
+NAD_AdvStatsTimeAxisLabelMonthDay = %e %b
+NAD_AdvStatsTimeAxisLabelHourMinute = %H:%M
 NAD_AdvStatsServerLabel = \u200d\u0938\u0930\u094d\u0935\u0930:
 NAD_AdvStatsGroupLabel = \u0938\u092e\u0942\u0939:
 NAD_AdvStatsCountersLabel = \u0915\u093e\u0909\u0902\u091f\u0930\u094d\u0938:
