--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -700,7 +700,8 @@ Alert_NotebookNotInitialized = Voor dit domein is nog geen Documentruimte op dom
 Alert_Bouncing_Reveal_Hidden_Adds = Een ongeldig verborgen doorstuuradres kan worden weergegeven door het geweigerde bericht.
 
 Alert_FlushCache = <b>Waarschuwing:</b> Als gevolg van het leegmaken van de Zimlet-/skincache zullen mailboxservers opnieuw getotaliseerde JavaScript- en CSS-bronnen genereren. Hierdoor kan de reactietijd van de webmailtoepassing tijdelijk worden verhoogd.  
-Alert_Flush_Theme_Cache = <b>Opmerking:</b> <hibrak>Voor wijzigingen van de thema-instellingen is leegmaken van de themacache van de server vereist. Je kunt dit doen door op de knop "Cache leegmaken" te klikken op de werkbalk van de serverinstellingen.
+Alert_Flush_Theme_Cache = <b>Opmerking:</b> \
+Voor wijzigingen van de thema-instellingen is leegmaken van de themacache van de server vereist. Je kunt dit doen door op de knop "Cache leegmaken" te klikken op de werkbalk van de serverinstellingen.
 
 Alert_Ngnix = <b>Opmerking:</b> Wijzigingen in instellingen worden pas van kracht nadat Ngnix opnieuw is gestart.
 
