--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -2191,7 +2191,7 @@ splashScreenZimbraUrl = <a href='http://www.zimbra.com' target=_blank>http://www
 splashScreenVersion = Wersja
 rememberMe = Zapami\u0119taj mnie
 
-IMPORT_WIZ_DOWNLOAD_HELP = <A HREF="/zimbraAdmin/adminhelp/pdf/User Instructions for ZCS Import Wizard.pdf" target=_blank>Instrukcje u\u017cytkownika</A>
+IMPORT_WIZ_DOWNLOAD_HELP = <a href="/zimbraAdmin/adminhelp/pdf/User Instructions for ZCS Import Wizard.pdf" target=_blank>Instrukcje u\u017cytkownika</a>
 CONNECTOR_DOWNLOAD_HELP = Instrukcje u\u017cytkownika 
 GENERAL_MIG_WIZ_DOWNLOAD_TEXT = Aplikacja systemu Windows przeprowadza mi\u0119dzyserwerow\u0105 migracj\u0119 poczty, kalendarza i kontakt\u00f3w z programu Microsoft Exchange, pliku PST lub programu IBM Domino do programu ZCS.
 MIG_WIZ_DOWNLOAD_TEXT = Aplikacja systemu Windows przeprowadza mi\u0119dzyserwerow\u0105 migracj\u0119 poczty, kalendarza i kontakt\u00f3w z programu Microsoft Exchange do programu ZCS. 
