--- a/WebRoot/messages/ZaMsg_th.properties
+++ b/WebRoot/messages/ZaMsg_th.properties
@@ -83,8 +83,8 @@ desc_help_center_1 = \u0e27\u0e34\u0e18\u0e35\u0e43\u0e0a\u0e49\u0e41\u0e1a\u0e1
 sub_desc_help_center_1 = \u0e40\u0e2d\u0e01\u0e2a\u0e32\u0e23\u0e1b\u0e23\u0e30\u0e01\u0e2d\u0e1a Zimbra Collaboration Server
 
 subtitle_help_center_2 = \u0e04\u0e39\u0e48\u0e21\u0e37\u0e2d\u0e1c\u0e39\u0e49\u0e14\u0e39\u0e41\u0e25\u0e23\u0e30\u0e1a\u0e1a
-desc_help_center_2 = \u0e04\u0e39\u0e48\u0e21\u0e37\u0e2d\u0e01\u0e32\u0e23\u0e14\u0e39\u0e41\u0e25\u0e08\u0e30\u0e2d\u0e18\u0e34\u0e1a\u0e32\u0e22\u0e2a\u0e16\u0e32\u0e1b\u0e31\u0e15\u0e22\u0e01\u0e23\u0e23\u0e21\u0e23\u0e30\u0e1a\u0e1a Zimbra \u0e04\u0e2d\u0e21\u0e42\u0e1e\u0e40\u0e19\u0e19\u0e15\u0e4c\u0e02\u0e2d\u0e07 Zimbra
-  \u0e1f\u0e31\u0e07\u0e01\u0e4c\u0e0a\u0e31\u0e19\u0e01\u0e32\u0e23\u0e14\u0e39\u0e41\u0e25 \u0e41\u0e25\u0e30\u0e04\u0e33\u0e2a\u0e31\u0e48\u0e07 CLI
+desc_help_center_2 = \u0e04\u0e39\u0e48\u0e21\u0e37\u0e2d\u0e01\u0e32\u0e23\u0e14\u0e39\u0e41\u0e25\u0e08\u0e30\u0e2d\u0e18\u0e34\u0e1a\u0e32\u0e22\u0e2a\u0e16\u0e32\u0e1b\u0e31\u0e15\u0e22\u0e01\u0e23\u0e23\u0e21\u0e23\u0e30\u0e1a\u0e1a Zimbra \u0e04\u0e2d\u0e21\u0e42\u0e1e\u0e40\u0e19\u0e19\u0e15\u0e4c\u0e02\u0e2d\u0e07 Zimbra\
+ \u0e1f\u0e31\u0e07\u0e01\u0e4c\u0e0a\u0e31\u0e19\u0e01\u0e32\u0e23\u0e14\u0e39\u0e41\u0e25 \u0e41\u0e25\u0e30\u0e04\u0e33\u0e2a\u0e31\u0e48\u0e07 CLI
 sub_desc_help_center_2 = \u0e04\u0e39\u0e48\u0e21\u0e37\u0e2d\u0e1c\u0e39\u0e49\u0e14\u0e39\u0e41\u0e25\u0e23\u0e30\u0e1a\u0e1a\u0e40\u0e01\u0e35\u0e48\u0e22\u0e27\u0e01\u0e31\u0e1a Zimbra Connector \u0e2a\u0e33\u0e2b\u0e23\u0e31\u0e1a Microsoft Outlook
 
 subtitle_help_center_3 = \u0e04\u0e39\u0e48\u0e21\u0e37\u0e2d\u0e1c\u0e39\u0e49\u0e43\u0e0a\u0e49
@@ -860,7 +860,7 @@ NAD_Service_Policyd = Policyd
 NAD_Service_SNMP = SNMP
 NAD_Service_AntiVirus = \u0e42\u0e1b\u0e23\u0e41\u0e01\u0e23\u0e21\u0e1b\u0e49\u0e2d\u0e07\u0e01\u0e31\u0e19\u0e44\u0e27\u0e23\u0e31\u0e2a
 NAD_Service_AntiSpam = \u0e42\u0e1b\u0e23\u0e41\u0e01\u0e23\u0e21\u0e1b\u0e49\u0e2d\u0e07\u0e01\u0e31\u0e19\u0e2a\u0e41\u0e1b\u0e21
-NAD_Service_OpenDKIM = DomainKeys Identified Mail
+NAD_Service_OpenDKIM = \u0e40\u0e21\u0e25\u0e17\u0e35\u0e48\u0e23\u0e30\u0e1a\u0e38\u0e04\u0e35\u0e22\u0e4c\u0e02\u0e2d\u0e07\u0e42\u0e14\u0e40\u0e21\u0e19
 NAD_Service_Logger = Logger
 NAD_Service_Spell = \u0e15\u0e31\u0e27\u0e15\u0e23\u0e27\u0e08\u0e2a\u0e2d\u0e1a\u0e01\u0e32\u0e23\u0e2a\u0e30\u0e01\u0e14
 NAD_Service_Imapproxy = \u0e1e\u0e23\u0e47\u0e2d\u0e01\u0e0b\u0e35\u0e22\u0e49\u0e2d\u0e19\u0e01\u0e25\u0e31\u0e1a
@@ -1216,7 +1216,7 @@ NAD_AdvStatsLabelDateFormat = %I:%M %p
 NAD_AdvStatsLoadingDataLabel = \u0e01\u0e33\u0e25\u0e31\u0e07\u0e42\u0e2b\u0e25\u0e14\u0e02\u0e49\u0e2d\u0e21\u0e39\u0e25\u0e2a\u0e33\u0e2b\u0e23\u0e31\u0e1a\u0e41\u0e1c\u0e19\u0e20\u0e39\u0e21\u0e34...
 NAD_AdvStatsNoDataLabel = \u0e02\u0e49\u0e2d\u0e21\u0e39\u0e25\u0e44\u0e21\u0e48\u0e1e\u0e23\u0e49\u0e2d\u0e21\u0e43\u0e0a\u0e49\u0e07\u0e32\u0e19
 NAD_AdvStatsTimeAxisLabelMonthDay = %b %e
-NAD_AdvStatsTimeAxisLabelHourMinute = %I:%M %p
+NAD_AdvStatsTimeAxisLabelHourMinute = %H:%M %p
 NAD_AdvStatsServerLabel = \u0e40\u0e0b\u0e34\u0e23\u0e4c\u0e1f\u0e40\u0e27\u0e2d\u0e23\u0e4c:
 NAD_AdvStatsGroupLabel = \u0e01\u0e25\u0e38\u0e48\u0e21:
 NAD_AdvStatsCountersLabel = \u0e15\u0e31\u0e27\u0e19\u0e31\u0e1a:
@@ -1383,8 +1383,8 @@ LBL_zimbraFeatureViewInHtmlEnabled = \u0e01\u0e32\u0e23\u0e14\u0e39\u0e2a\u0e34\
 LBL_zimbraFeatureGalEnabled = \u0e01\u0e32\u0e23\u0e40\u0e02\u0e49\u0e32\u0e16\u0e36\u0e07\u0e23\u0e32\u0e22\u0e01\u0e32\u0e23\u0e43\u0e19\u0e2a\u0e21\u0e38\u0e14\u0e23\u0e32\u0e22\u0e0a\u0e37\u0e48\u0e2d\u0e2a\u0e48\u0e27\u0e19\u0e01\u0e25\u0e32\u0e07
 LBL_zimbraFeatureMAPIConnectorEnabled = \u0e15\u0e31\u0e27\u0e40\u0e0a\u0e37\u0e48\u0e2d\u0e21\u0e15\u0e48\u0e2d MAPI (Microsoft Outlook)
 LBL_zimbraFeatureEwsEnabled = \u0e01\u0e32\u0e23\u0e40\u0e02\u0e49\u0e32\u0e16\u0e36\u0e07\u0e44\u0e04\u0e25\u0e40\u0e2d\u0e47\u0e19\u0e15\u0e4c EWS (Exchange)
-LBL_zimbraFeatureTouchClientEnabled = Touch Client (Mobile Web App)
-LBL_zimbraFeatureWebClientOfflineAccessEnabled = Offline support for Advanced (Ajax) client
+LBL_zimbraFeatureTouchClientEnabled = Touch Client (\u0e41\u0e2d\u0e1e\u0e1a\u0e19\u0e40\u0e27\u0e47\u0e1a\u0e2a\u0e33\u0e2b\u0e23\u0e31\u0e1a\u0e21\u0e37\u0e2d\u0e16\u0e37\u0e2d)
+LBL_zimbraFeatureWebClientOfflineAccessEnabled = \u0e04\u0e27\u0e32\u0e21\u0e0a\u0e48\u0e27\u0e22\u0e40\u0e2b\u0e25\u0e37\u0e2d\u0e2d\u0e2d\u0e1f\u0e44\u0e25\u0e19\u0e4c\u0e2a\u0e33\u0e2b\u0e23\u0e31\u0e1a\u0e44\u0e04\u0e25\u0e40\u0e2d\u0e47\u0e19\u0e15\u0e4c\u0e02\u0e31\u0e49\u0e19\u0e2a\u0e39\u0e07 (Ajax)
 LBL_zimbraFeatureContactsEnabled = \u0e1c\u0e39\u0e49\u0e15\u0e34\u0e14\u0e15\u0e48\u0e2d
 LBL_zimbraFeatureMailEnabled = \u0e08\u0e14\u0e2b\u0e21\u0e32\u0e22
 LBL_zimbraFeatureIdentitiesEnabled = \u0e25\u0e31\u0e01\u0e29\u0e13\u0e30
