--- a/WebRoot/messages/ZabMsg_in.properties
+++ b/WebRoot/messages/ZabMsg_in.properties
@@ -19,7 +19,10 @@ LBL_zimbraPrefAdminConsoleWarnOnExit =Tampilkan peringatan ketika administrator 
 ERROR_ZCS_NOT_RUNNING = Tidak bisa tersambung ke server Zimbra. Pastikan Zimbra berjalan.
 zimbraAdminTitle = Administrasi Zimbra
 HELP_PAGE_0 = Pusat Bantuan Administrator Zimbra
-HELP_PAGE_1 = <htp_break>	Di bawah ini tautan ke Zimbra <htp_break>	dokumen dan forum, untuk membantu Anda mendapatkan jawaban atas pertanyaan Anda tentang menggunakan <htp_break>	Server Kolaborasi Zimbra.
+HELP_PAGE_1 = \
+	Di bawah ini tautan ke Zimbra \
+	dokumen dan forum, untuk membantu Anda mendapatkan jawaban atas pertanyaan Anda tentang menggunakan \
+	Server Kolaborasi Zimbra.
 
 # DEPRECATED
 # see ZaMsg.subtitle_help_center_1
@@ -27,10 +30,14 @@ HELP_PAGE_2 = Bantuan Online Zimbra
 
 HELP_PAGE_3 = Untuk mempelajari cara menggunakan konsol administrasi, klik tautan Bantuan Online Zimbra.
 HELP_PAGE_6 = Forum Zimbra
-HELP_PAGE_7 = <htp_break>	Dapatkan jawaban atas pertanyaan Anda dari forum Zimbra. Anda dapat mencari <htp_break>    jawaban dari postingan, dan Anda dapat memposting pertanyaan.
+HELP_PAGE_7 = \
+	Dapatkan jawaban atas pertanyaan Anda dari forum Zimbra. Anda dapat mencari \
+    jawaban dari postingan, dan Anda dapat memposting pertanyaan.
 HELP_PAGE_8 = Panduan Administrasi Zimbra
-HELP_PAGE_9 = Petunjuk Panduan Administrasi menjelaskan arsitektur sistem Zimbra, komponen Zimbra, <htp_break>	fungsi administrasi, dan perintah CLI.
-HELP_PAGE_13 = Wiki Zimbra berisi artikel yang telah ditulis oleh tim dukungan dan <htp_break>komunitas sebagai respons terhadap pemecahan masalah dan administrasi \
+HELP_PAGE_9 = Petunjuk Panduan Administrasi menjelaskan arsitektur sistem Zimbra, komponen Zimbra, \
+	fungsi administrasi, dan perintah CLI.
+HELP_PAGE_13 = Wiki Zimbra berisi artikel yang telah ditulis oleh tim dukungan dan \
+komunitas sebagai respons terhadap pemecahan masalah dan administrasi \
 issues that were not covered in the documentation.
 HELP_OTHER_GUIDES_CONNNECTOR_INFO = Gunakan Zimbra dengan klien lain? Pelajari panduan ini.
 zimbraTitle = Konsol Administrasi Zimbra 
@@ -47,13 +54,21 @@ zimbraAbout = Tentang Zimbra...
 
 # Used for About Screen copyright section
 # Takes in the current year as a parameter for copyright end year value
-aboutScreenCopyright = Zimbra {0} (gambaran {1})<br><br> Hak Cipta \u00a9 2005-2015 Synacor, Inc. <htp_break>  Semua hak dilindungi undang-undang. Produk ini dilindungi oleh hak cipta dan hak kekayaan intelektual A.S. dan internasional. <htp_break>  "Zimbra" adalah merek dagang terdaftar dari Synacor, Inc. di Amerika Serikat dan yurisdiksi lainnya. <htp_break>  Semua merek dan nama lain yang disebutkan di sini mungkin merupakan merek dagang masing-masing perusahaan.<htp_break>  <br><br> Synacor, Inc. <htp_break>  <a href="http://www.synacor.com" target="_blank">www.synacor.com</a>
+aboutScreenCopyright = Zimbra {0} (gambaran {1})<br><br> Hak Cipta \u00a9 2005-2015 Synacor, Inc. \
+  Semua hak dilindungi undang-undang. Produk ini dilindungi oleh hak cipta dan hak kekayaan intelektual A.S. dan internasional. \
+  "Zimbra" adalah merek dagang terdaftar dari Synacor, Inc. di Amerika Serikat dan yurisdiksi lainnya. \
+  Semua merek dan nama lain yang disebutkan di sini mungkin merupakan merek dagang masing-masing perusahaan.\
+  <br><br> Synacor, Inc. \
+  <a href="http://www.synacor.com" target="_blank">www.synacor.com</a>
 
 # Used for Login/Splash Screen copyright section
 # Takes in the current year as a parameter for copyright end year value
 splashScreenCopyright = Hak Cipta \u00a9 2005-2015 Synacor, Inc. Semua hak dilindungi undang-undang. "Zimbra" adalah merek dagang terdaftar dari Synacor, Inc.
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> :: pemimpin dalam perpesanan dan kolaborasi sumber terbuka :: <htp_break>    <a target="_new" href="http://blog.zimbra.com">Blog</a> - <htp_break>    <a target="_new" href="http://wiki.zimbra.com">Wiki</a> - <htp_break>    <a target="_new" href="http://www.zimbra.com/forums">Forums</a>
+clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> :: pemimpin dalam perpesanan dan kolaborasi sumber terbuka :: \
+    <a target="_new" href="http://blog.zimbra.com">Blog</a> - \
+    <a target="_new" href="http://wiki.zimbra.com">Wiki</a> - \
+    <a target="_new" href="http://www.zimbra.com/forums">Forums</a>
 ZWC_END_USER_GUIDE = Panduan Pengguna Akhir ZWC untuk 8.0
 ZWC_END_USER_GUIDE_INFO = Panduan pengguna akhir menjelaskan fitur dan aplikasi yang digunakan pada Klien Web Zimbra.
 MessageContent = pesan
@@ -69,7 +84,9 @@ HELP_CENTER_TITLE = Pusat Bantuan Administrator Zimbra
 
 # DEPRECATED
 # see ZaMsg.desc_help_center_1
-onlineHelpDetail = Untuk mempelajari cara menggunakan konsol administrasi, klik tautan Bantuan Online Zimbra. Untuk detail tentang <htp_break>                   fitur dan permasalahan baru yang telah diatasi dalam rilis ini, buka halaman <a target="_new" href="{0}"><htp_break>                   Dokumen Server Kolaborasi Zimbra</a> dan baca catatan rilis.
+onlineHelpDetail = Untuk mempelajari cara menggunakan konsol administrasi, klik tautan Bantuan Online Zimbra. Untuk detail tentang \
+                   fitur dan permasalahan baru yang telah diatasi dalam rilis ini, buka halaman <a target="_new" href="{0}">\
+                   Dokumen Server Kolaborasi Zimbra</a> dan baca catatan rilis.
 HELP_topMigrationQuestions = Pertanyaan Migrasi Populer
 HELP_adminGuide = Panduan Administrator
 HELP_adminGuideDetail = Petunjuk Panduan Administrasi menjelaskan arsitektur sistem Zimbra, komponen Zimbra, fungsi administrasi, dan perintah CLI.
