--- a/WebRoot/messages/ZaMsg_ar.properties
+++ b/WebRoot/messages/ZaMsg_ar.properties
@@ -853,7 +853,7 @@ NAD_Service_Policyd = Policyd
 NAD_Service_SNMP = SNMP
 NAD_Service_AntiVirus = \u062d\u0645\u0627\u064a\u0629 \u0645\u0646 \u0627\u0644\u0641\u064a\u0631\u0648\u0633\u0627\u062a
 NAD_Service_AntiSpam = \u0627\u0644\u062d\u0645\u0627\u064a\u0629 \u0645\u0646 \u0627\u0644\u0631\u0633\u0627\u0626\u0644 \u0627\u0644\u0645\u0632\u0639\u062c\u0629
-NAD_Service_OpenDKIM = DomainKeys Identified Mail
+NAD_Service_OpenDKIM = \u0628\u0631\u064a\u062f DomainKeys \u0627\u0644\u0645\u0639\u0631\u0651\u0641
 NAD_Service_Logger = \u0645\u0633\u062c\u0644
 NAD_Service_Spell = \u0645\u062f\u0642\u0642 \u0625\u0645\u0644\u0627\u0626\u064a
 NAD_Service_Imapproxy = \u0648\u0643\u064a\u0644 \u0639\u0643\u0633\u064a
