--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -78,14 +78,14 @@ exception_required_lifetime = Debes especificar un valor para esta vigencia.
 title_help_center = Centro de ayuda del administrador de Zimbra
 
 subtitle_help_center_1 = Ayuda en l\u00ednea de Zimbra
-desc_help_center_1 = El centro de ayuda de Zimbra explica el uso de la consola de administraci\u00f3n. Para m\u00e1s informaci\u00f3n sobre las nuevas
-  Funciones y problemas que se han resuelto en esta versi\u00f3n, consulta las notas de la \u00faltima versi\u00f3n en la documentaci\u00f3n del servidor de
-  Zimbra Collaboration.
+desc_help_center_1 = El centro de ayuda de Zimbra explica el uso de la consola de administraci\u00f3n. Para m\u00e1s informaci\u00f3n sobre las nuevas\
+ funciones y problemas que se han resuelto en esta versi\u00f3n, consulta las notas de la \u00faltima versi\u00f3n en la documentaci\u00f3n del servidor de\
+ Zimbra Collaboration.
 sub_desc_help_center_1 = Documentaci\u00f3n del servidor de Zimbra Collaboration
 
 subtitle_help_center_2 = Gu\u00eda del administrador
-desc_help_center_2 = La Gu\u00eda del administrador describe la arquitectura del sistema Zimbra, los componentes de Zimbra, las
-  Funciones administrativas y los comandos CLI.
+desc_help_center_2 = La Gu\u00eda del administrador describe la arquitectura del sistema Zimbra, los componentes de Zimbra, las\
+  funciones administrativas y los comandos CLI.
 sub_desc_help_center_2 = Gu\u00eda del administrador para el conector de Zimbra para Microsoft Outlook
 
 subtitle_help_center_3 = Manual de usuario final
@@ -94,19 +94,19 @@ sub_desc_help_center_3 = Manual de usuario para el conector de Zimbra para Micro
 
 title_ask_community = Pregunta a la comunidad
 
-desc_ask_community_1 = <a target="_new" href="http://www.zimbra.com/forums">Foros de Zimbra</a> es un excelente lugar para obtener
+desc_ask_community_1 = <a target="_new" href="http://www.zimbra.com/forums">Foros de Zimbra</a> es un excelente lugar para obtener\
   respuestas a tus preguntas Puedes buscar respuestas de publicaciones y tambi\u00e9n puedes publicar preguntas.
 
 desc_ask_community_2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> incluye art\u00edculos que el servicio de asistencia \
-  y la comunidad de usuarios han escrito en respuesta a preguntas de resoluci\u00f3n de problemas y problemas de administraci\u00f3n no incluidas en
-  la documentaci\u00f3n
+  y la comunidad de usuarios han escrito en respuesta a preguntas de resoluci\u00f3n de problemas y problemas de administraci\u00f3n no incluidas en\
+ la documentaci\u00f3n
 
 title_top_migration_questions = Preguntas principales sobre la migraci\u00f3n
 
 ques_top_migration_questions_1 = \u00bfC\u00f3mo hago para migrar cuentas de correo electr\u00f3nico de servidor de Exchange a Zimbra?
 
-ques_top_migration_questions_2 = \u00bfC\u00f3mo pueden los usuarios importar el contenido de un archivo .pst de un buz\u00f3n de correo de Microsoft Outlook 2007
-  2010, 2013 a Zimbra?
+ques_top_migration_questions_2 = \u00bfC\u00f3mo pueden los usuarios importar el contenido de un archivo .pst de un buz\u00f3n de correo de Microsoft Outlook 2007\
+ 2010, 2013 a Zimbra?
 
 ques_top_migration_questions_3 = \u00bfC\u00f3mo hago para migrar cuentas de correo electr\u00f3nico de servidor de Domino a Zimbra?
 
