--- a/WebRoot/messages/ZaMsg_lo.properties
+++ b/WebRoot/messages/ZaMsg_lo.properties
@@ -485,7 +485,7 @@ OVP_related = \u0e81\u0ec8\u0ebd\u0ea7\u0e82\u0ec9\u0ead\u0e87
 OVP_recent = \u0e88\u0eb8\u0e94\u0e9b\u0eb0\u0eaa\u0ebb\u0e87\u200b\u0eab\u0ebc\u0ec9\u0eb2\u0eab\u0ebc\u0ec9\u0eb2\u0eaa\u0eb8\u0e94
 OVP_allSearchResult = \u0e9c\u0ebb\u0e99\u200b\u0ec4\u0e94\u0ec9\u200b\u0eae\u0eb1\u0e9a\u200b\u0e97\u0eb1\u0e87\u0edd\u0ebb\u0e94
 OVP_accountSearchResult = \u0e9a\u0eb1\u0e99\u0e8a\u0eb5
-OVP_aliasSearchResult = Aliases
+OVP_aliasSearchResult = \u0e99\u0eb2\u0ea1\u0ec1\u0e9d\u0e87
 OVP_domainSearchResult = \u0ec2\u0e94\u0ec0\u0ea1\u0e99
 OVP_searchOption = \u0e95\u0ebb\u0ea7\u200b\u0ec0\u0ea5\u0eb7\u0ead\u0e81\u0e84\u0ebb\u0ec9\u0e99\u200b\u0eab\u0eb2
 OVP_savedSearch = \u200b\u0ec4\u0e94\u0ec9\u0e9a\u0eb1\u0e99\u0e97\u0eb6\u0e81\u0e81\u0eb2\u0e99\u200b\u0e84\u0ebb\u0ec9\u0e99\u200b\u0eab\u0eb2\u0ec1\u0ea5\u0ec9\u0ea7
@@ -1238,7 +1238,7 @@ NAD_MailOptions = \u0e95\u0ebb\u0ea7\u200b\u0ec0\u0ea5\u0eb7\u0ead\u0e81\u0ec0\u
 NAD_MailOptionsStandardClient = \u200b\u0ec0\u0e84\u0eb7\u0ead\u200b\u0e82\u0ec8\u0eb2\u0e8d\u200b\u0ea5\u0eb9\u0e81 (HTML) \u0ea1\u0eb2\u0e94\u0e95\u0eb0\u0e96\u0eb2\u0e99
 NAD_ContactsOptions = \u0e95\u0ebb\u0ea7\u0ec0\u0ea5\u0eb7\u0ead\u0e81\u0ea5\u0eb2\u0e8d\u0e8a\u0eb7\u0e9c\u0eb9\u0ec9\u0e95\u0eb4\u0e94\u0e95\u0ecd\u0ec8
 NAD_CalendarOptions = \u0e95\u0ebb\u0ea7\u200b\u0ec0\u0ea5\u0eb7\u0ead\u0e81\u200b\u0e9b\u0eb0\u0e95\u0eb4\u0e97\u0eb4\u0e99
-NAD_ChatOptions = Chat Options
+NAD_ChatOptions = \u0e97\u0eb2\u0e87\u200b\u0ec0\u0ea5\u0eb7\u0ead\u0e81\u200b\u0e81\u0eb2\u0e99\u200b\u0ec1\u0e8a\u0eb1\u0e94
 NAD_MailOptionsSending = \u0e81\u0ecd\u0eb2\u0ea5\u0eb1\u0e87\u0eaa\u0ebb\u0ec8\u0e87\u200b\u0ec0\u0ea1\u0ea7
 NAD_MailOptionsReceiving = \u0e81\u0ecd\u0eb2\u0ea5\u0eb1\u0e87\u0eae\u0eb1\u0e9a\u200b\u0ec0\u0ea1\u0ea7
 NAD_MailOptionsComposing = \u0e81\u0ecd\u0eb2\u0ea5\u0eb1\u0e87\u200b\u0eae\u0ec8\u0eb2\u0e87\u0ec0\u0ea1\u0ea7
@@ -1348,7 +1348,7 @@ VM_VolumesGrpTitle = \u0e88\u0eb1\u0e94\u0e81\u0eb2\u0e99\u200b\u0ea5\u0eb0\u0e9
 VM_VOLUME_Msg = \u0e82\u0ecd\u0ec9\u200b\u0ea1\u0eb9\u0e99
 VM_VOLUME_Index = \u0e94\u0eb1\u0e94\u0e8a\u0eb0\u0e99\u0eb5
 
-NAD_MS = ms
+NAD_MS = \u0ea1\u0eb4\u200b\u0ea5\u200b\u0ea5\u0eb4\u200b\u0ea7\u0eb4
 NAD_Sec = \u0ea7\u0eb4\u0e99\u0eb2\u0e97\u0eb5
 NAD_ACC_Start_Reindexing = \u200b\u0ec0\u0ea5\u0eb5\u0ec8\u200b\u0ea1\u200b\u0ec0\u0eae\u0eb1\u0e94\u200b\u0e94\u0eb1\u0e94\u0e8a\u0eb0\u0e99\u0eb5\u200b\u200b\u0ec3\u0eab\u0ea1\u0ec8
 NAD_ACC_Abort_Reindexing = \u0e8d\u0ebb\u0e81\u200b\u0ec0\u0ea5\u0eb5\u0e81\u200b\u200b\u0ec0\u0eae\u0eb1\u0e94\u200b\u0e94\u0eb1\u0e94\u0e8a\u0eb0\u0e99\u0eb5\u200b\u0ec3\u0eab\u0ea1\u0ec8
@@ -1372,12 +1372,12 @@ NAD_zimbraGeneralFeature = \u0e84\u0eb8\u0e99\u0ea5\u0eb1\u0e81\u0eaa\u0eb0\u0e9
 NAD_zimbraMailFeature = \u0e84\u0eb8\u0e99\u0ea5\u0eb1\u0e94\u200b\u0eaa\u0eb0\u200b\u0e99\u0eb0\u200b\u0e82\u0ecd\u0ec9\u0e84\u0ea7\u0eb2\u0ea1\u200b\u0ec0\u0ea1\u200b\u0ea7
 NAD_zimbraContactFeature = \u0e84\u0eb8\u0e99\u0ea5\u0eb1\u0e81\u0eaa\u0eb0\u0e99\u0eb0\u0ea5\u0eb2\u0e8d\u0e8a\u0eb7\u0ec8\u0e9c\u0eb9\u0ec9\u0e95\u0eb4\u0e94\u0e95\u0ecd\u0ec8
 NAD_zimbraCalendarFeature = \u0e84\u0eb8\u0e99\u200b\u0ea5\u0eb1\u0e81\u0eaa\u0eb0\u0e99\u0eb0\u200b\u0e82\u0ead\u0e87\u0e9b\u0eb0\u0e95\u0eb4\u0e97\u0eb4\u0e99
-NAD_zimbraChatFeature = IM Features
+NAD_zimbraChatFeature = \u0e9f\u0eb5\u200b\u0ec0\u0e88\u0eb5 IM
 NAD_zimbraSearchFeature = \u0e84\u0ebb\u0ec9\u0e99\u200b\u0eab\u0eb2\u200b\u0e84\u0eb8\u0e99\u0ea5\u0eb1\u0e81\u0eaa\u0eb0\u0e99\u0eb0
 LBL_zimbraFeatureNotebookEnabled = \u0ec0\u0ead\u0e81\u0eb0\u0eaa\u0eb2\u0e99
 LBL_zimbraFeatureBriefcasesEnabled = \u0e81\u0eb0\u0ec0\u0e9b\u0ebb\u0eb2\u0ec3\u0eaa\u0ec8\u0ec0\u0ead\u0e81\u0eb0\u0eaa\u0eb2\u0e99
 LBL_zimbraFeatureHtmlComposeEnabled = \u0eae\u0ec8\u0eb2\u0e87 HTML 
-LBL_zimbraFeatureChatEnabled = Chat
+LBL_zimbraFeatureChatEnabled = \u0e81\u0eb2\u0e99\u200b\u0ec1\u0e8a\u0eb1\u0e94
 LBL_zimbraFeatureInstantNotify = \u200b\u0ec1\u0e88\u0ec9\u0e87\u0ec0\u0e95\u0eb7\u0ead\u0e99\u200b\u0eaa\u0eb3\u200b\u0ec0\u0ea5\u0eb1\u0e94\u200b\u0eae\u0eb9\u0e9a
 LBL_zimbraPrefIMAutoLogin = \u200b\u0ec0\u0e82\u0ebb\u0ec9\u0eb2\u200b\u0eaa\u0eb9\u0ec8\u200b\u0e81\u0eb2\u0e99\u200b\u0e9a\u0ecd\u0ea5\u0eb4\u0e81\u0eb2\u0e99\u200b\u0e82\u0ecd\u0ec9\u0e84\u0ea7\u0eb2\u0ea1\u200b\u0eaa\u0eb3\u200b\u0ec0\u0ea5\u0eb1\u0e94\u200b\u0eae\u0eb9\u0e9a\u200b\u0ec2\u0e94\u0e8d\u200b\u0ead\u0eb1\u0e94\u0e95\u0eb0\u200b\u0ec2\u0e99\u200b\u0ea1\u0eb1\u0e94 
 NAD_Feature = \u0e84\u0eb8\u0e99\u0ea5\u0eb1\u0e81\u0eaa\u0eb0\u0e99\u0eb0: 
@@ -1501,7 +1501,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = \u0eaa\u0eb0\u200b\u0ec1\u0e94\u0e87\u
 LBL_zimbraPrefImapSearchFoldersEnabled = \u0eaa\u0eb0\u200b\u0ec1\u0e94\u0e87\u200b\u0ec2\u0e9f\u0e99\u200b\u0ec0\u0e94\u0eb5\u200b\u0e84\u0ebb\u0ec9\u0e99\u200b\u0eab\u0eb2 IMAP 
 LBL_zimbraPrefMailForwardingAddress = \u0e97\u0eb5\u0ec8\u0ea2\u0eb9\u0ec8\u200b\u0eaa\u0ebb\u0ec8\u0e87\u200b\u0e95\u0ecd\u0ec8\u200b\u0e9c\u0eb9\u0ec9\u200b\u0ec3\u0e8a\u0ec9\u200b\u0e97\u0eb5\u0ec8\u200b\u0ea5\u0eb0\u0e9a\u0eb8:
 LBL_zimbraPrefMailForwardingAddressMsg = \u0e97\u0eb5\u0ec8\u0ea2\u0eb9\u0ec8\u200b\u0eaa\u0ebb\u0ec8\u0e87\u200b\u0e95\u0ecd\u0ec8\u200b\u0e9c\u0eb9\u0ec9\u200b\u0ec3\u0e8a\u0ec9\u200b\u0e97\u0eb5\u0ec8\u200b\u0ea5\u0eb0\u0e9a\u0eb8
-LBL_zimbraPrefChatPlaySound = Play notification sound
+LBL_zimbraPrefChatPlaySound = \u0eab\u0ebc\u0eb4\u0ec9\u0e99\u200b\u0e81\u0eb2\u0e99\u200b\u0ec0\u0e95\u0eb7\u0ead\u0e99\u200b\u0eaa\u0ebd\u0e87
 
 ERROR_missing_zimbraPrefMailForwardingAddress = \u0ea2\u0ec8\u0eb2\u0e87\u200b\u0edc\u0ec9\u0ead\u0e8d\u200b\u0e95\u0ec9\u0ead\u0e87\u200b\u0ea5\u0eb0\u0e9a\u0eb8\u200b\u0e97\u0eb5\u0ec8\u0ea2\u0eb9\u0ec8\u0eaa\u0ebb\u0ec8\u0e87\u200b\u0e95\u0ecd\u0ec8\u0edc\u0eb6\u0ec8\u0e87\u200b\u0e97\u0eb5\u0ec8\u200b\u0ea2\u0eb9\u0ec8\u200b \u200b\u200b\u0ec0\u0ea1\u0eb7\u0ec8\u0ead\u200b\u0ec0\u0ea5\u0eb7\u0ead\u0e81\u200b\u0e9a\u0ecd\u0ec8\u200b\u200b\u0ec0\u0e81\u0eb1\u0e9a\u0eae\u0eb1\u0e81\u0eaa\u0eb2\u200b\u0eaa\u0eb3\u200b\u0ec0\u0e99\u0ebb\u0eb2\u200b\u0e82\u0ecd\u0ec9\u0e84\u0ea7\u0eb2\u0ea1\u200b\u0ec4\u0ea7\u0ec9.
 
@@ -2779,8 +2779,8 @@ multiple_servers = \u0eab\u0ebc\u0eb2\u0e8d\u0ec0\u0e8a\u0eb5\u0ec0\u0ea7\u0eb5
 Two_Factor_Authentication = \u0e81\u0eb2\u0e99\u0e81\u0ea7\u0e94\u200b\u0eaa\u0ead\u0e9a\u200b\u0e84\u0ea7\u0eb2\u0ea1\u200b\u0e96\u0eb7\u0e81\u200b\u0e95\u0ec9\u0ead\u0e87\u0ec1\u0e9a\u0e9a\u0eaa\u0ead\u0e87\u200b\u0e9b\u0eb1\u0e94\u200b\u0ec4\u0e88
 LBL_Two_Step_Authentication = \u0e81\u0eb2\u0e99\u0e81\u0ea7\u0e94\u200b\u0eaa\u0ead\u0e9a\u200b\u0e84\u0ea7\u0eb2\u0ea1\u200b\u0e96\u0eb7\u0e81\u200b\u0e95\u0ec9\u0ead\u0e87\u200b\u0ec1\u0e9a\u0e9a\u0eaa\u0ead\u0e87\u200b\u200b\u0e82\u0eb1\u0ec9\u0e99\u200b\u0e95\u0ead\u0e99
 LBL_Enable_Two_Factor_Authentication = \u0ec0\u0e9b\u0eb5\u0e94\u0ec3\u0e8a\u0ec9\u0e87\u0eb2\u0e99\u0e81\u0eb2\u0e99\u0e81\u0ea7\u0e94\u200b\u0eaa\u0ead\u0e9a\u200b\u0e84\u0ea7\u0eb2\u0ea1\u200b\u0e96\u0eb7\u0e81\u200b\u0e95\u0ec9\u0ead\u0e87\u200b\u0ec1\u0e9a\u0e9a\u0eaa\u0ead\u0e87\u200b\u0e9b\u0eb1\u0e94\u200b\u0ec4\u0e88
-LBL_Two_Factor_Authentication_Active = Active
+LBL_Two_Factor_Authentication_Active = \u0ec0\u0e9b\u0eb5\u0e94\u200b\u0ea2\u0eb9\u0ec8
 LBL_Require_Two_Step_Authentication = \u0e95\u0ec9\u0ead\u0e87\u200b\u0e81\u0eb2\u0e99\u0e81\u0eb2\u0e99\u0e81\u0ea7\u0e94\u200b\u0eaa\u0ead\u0e9a\u200b\u0e84\u0ea7\u0eb2\u0ea1\u200b\u0e96\u0eb7\u0e81\u200b\u0e95\u0ec9\u0ead\u0e87\u200b\u0ec1\u0e9a\u0e9a\u0eaa\u0ead\u0e87\u200b\u0e82\u0eb1\u0ec9\u0e99\u200b\u0e95\u0ead\u0e99
 LBL_Number_Of_One_Time_Codes = \u0e88\u0eb3\u200b\u0e99\u0ea7\u0e99\u200b\u0e82\u0ead\u0e87\u0ea5\u0eb0\u200b\u0eab\u0eb1\u0e94\u0ec3\u0e99\u200b\u0e84\u0eb1\u0ec9\u0e87\u200b\u0edc\u0eb6\u0ec8\u0e87\u200b\u0e97\u0eb5\u0ec8\u200b\u0e88\u0eb0\u200b\u0eaa\u0ec9\u0eb2\u0e87:
-MSG_Number_Of_One_Time_Codes = Number of one-time codes to generate
+MSG_Number_Of_One_Time_Codes = \u0e88\u0eb3\u200b\u0e99\u0ea7\u0e99\u200b\u0ea5\u0eb0\u200b\u0eab\u0eb1\u0e94\u200b\u0e84\u0eb1\u0ec9\u0e87\u200b\u0e94\u0ebd\u0ea7\u200b\u0e97\u0eb5\u0ec8\u200b\u0e88\u0eb0\u200b\u0eaa\u0ec9\u0eb2\u0e87\u200b\u0e82\u0eb6\u0ec9\u0e99
 LBL_Enable_Application_Passcodes = \u0ec0\u0e9b\u0eb5\u0e94\u0ec3\u0e8a\u0ec9\u0e87\u0eb2\u0e99\u0ea5\u0eb0\u200b\u0eab\u0eb1\u0e94\u200b\u0e9c\u0ec8\u0eb2\u0e99\u200b\u0e81\u0eb2\u0e99\u0ec3\u0e8a\u0ec9\u0e87\u0eb2\u0e99
