Bug: 103217 - update copyright for Admin Console
The string files for the Admin Console (ZabMsg*) had several issues:

1. Variable interpolation is used to insert the current year as the final copyright year. That was overwritten in change 514759 (bug 86410) in the base file in 2014. That has been fixed. There is no need to insert the year 2016 in these files.

2. All files except the base file attributed the copyright to Telligent.

3. The copyright is not translated in most languages. It is translated in 6 of the 30 non-English localizations.

https://bugzilla.zimbra.com/show_bug.cgi?id=103217

Copied from Perforce
 Change: 565364

--- a/WebRoot/messages/ZabMsg_fr_CA.properties
+++ b/WebRoot/messages/ZabMsg_fr_CA.properties
@@ -54,18 +54,18 @@ zimbraAbout = \u00c0 propos de Zimbra...
 
 # Used for About Screen copyright section
 # Takes in the current year as a parameter for copyright end year value
-aboutScreenCopyright = Copyright \u00a9 2005-{0} Telligent Systems, Inc. Tous droits r\u00e9serv\u00e9s. Ce produit est prot\u00e9g\u00e9 \
+aboutScreenCopyright = Copyright \u00a9 2005-{0} Synacor, Inc. Tous droits r\u00e9serv\u00e9s. Ce produit est prot\u00e9g\u00e9 \
  en vertu des lois am\u00e9ricaines et internationales sur les droits d'auteur et la propri\u00e9t\u00e9 intellectuelle.<br /><br />\
-  \u00ab\u00a0Telligent\u00a0\u00bb et \u00ab\u00a0Zimbra\u00a0\u00bb sont des marques de commerce d\u00e9pos\u00e9es ou des marques commerciales de Telligent Systems, Inc.\
+  \u00ab\u00a0Synacor\u00a0\u00bb et \u00ab\u00a0Zimbra\u00a0\u00bb sont des marques de commerce d\u00e9pos\u00e9es ou des marques commerciales de Synacor, Inc.\
  aux \u00c9tats-Unis et dans d'autres territoires de comp\u00e9tence. Toutes les autres marques et noms mentionn\u00e9s dans le pr\u00e9sent document peuvent \u00eatre des \
  marques commerciales de leurs entreprises respectives.<br /><br />\
-  Telligent Systems, Inc. d/b/a Zimbra Software, LLC<br />\
+  Synacor, Inc. d/b/a Zimbra Software, LLC<br />\
   <a href="http://www.zimbra.com" target="_blank">www.zimbra.com</a>
 
 # Used for Login/Splash Screen copyright section
 # Takes in the current year as a parameter for copyright end year value
-splashScreenCopyright = Copyright \u00a9 2005-{0} Telligent Systems, Inc. Tous droits r\u00e9serv\u00e9s. Telligent et \
- Zimbra sont des marques de commerce d\u00e9pos\u00e9es ou des marques commerciales de Telligent Systems, Inc.
+splashScreenCopyright = Copyright \u00a9 2005-{0} Synacor, Inc. Tous droits r\u00e9serv\u00e9s. Synacor et \
+ Zimbra sont des marques de commerce d\u00e9pos\u00e9es ou des marques commerciales de Synacor, Inc.
 
 clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a>, le sp\u00e9cialiste des logiciels de messagerie et de collaboration Open Source \
     <a target="_new" href="http://blog.zimbra.com">Blog</a> - \
