--- a/WebRoot/messages/ZabMsg_hi.properties
+++ b/WebRoot/messages/ZabMsg_hi.properties
@@ -48,18 +48,18 @@ zimbraAbout = Zimbra \u0915\u0947 \u092c\u093e\u0930\u0947 \u092e\u0947\u0902...
 
 # Used for About Screen copyright section
 # Takes in the current year as a parameter for copyright end year value
-aboutScreenCopyright = Copyright \u00a9 2005-{0} Telligent Systems, Inc. All rights reserved. This product is \
+aboutScreenCopyright = Copyright \u00a9 2005-{0} Synacor, Inc. All rights reserved. This product is \
   protected by U.S. and international copyright and intellectual property laws.<br /><br />\
-  "Telligent" and "Zimbra" are registered trademarks or trademarks of Telligent Systems, Inc. in the United States \
+  "Synacor" and "Zimbra" are registered trademarks or trademarks of Synacor, Inc. in the United States \
   and other jurisdictions. All other marks and names mentioned herein may be trademarks of their respective \
   companies.<br /><br />\
-  Telligent Systems, Inc. d/b/a Zimbra Software, LLC<br />\
+  Synacor, Inc. d/b/a Zimbra Software, LLC<br />\
   <a href="http://www.zimbra.com" target="_blank">www.zimbra.com</a>
 
 # Used for Login/Splash Screen copyright section
 # Takes in the current year as a parameter for copyright end year value
-splashScreenCopyright = Copyright \u00a9 2005-{0} Telligent Systems, Inc. All rights reserved. Telligent and \
-  Zimbra are registered trademarks or trademarks of Telligent Systems, Inc.
+splashScreenCopyright = Copyright \u00a9 2005-{0} Synacor, Inc. All rights reserved. Synacor and \
+  Zimbra are registered trademarks or trademarks of Synacor, Inc.
 
 clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> :: \u0913\u092a\u0928 \u0938\u094b\u0930\u094d\u0938 \u092e\u0948\u0938\u0947\u091c\u093f\u0902\u0917 \u0914\u0930 \u0938\u0939\u092f\u094b\u0917 \u0905\u0917\u094d\u0930\u0923\u0940 \u0939\u0948 :: \
     <a target="_new" href="http://blog.zimbra.com">\u092c\u094d\u0932\u0949\u0917</a> - \
