--- a/WebRoot/messages/ZabMsg_ru.properties
+++ b/WebRoot/messages/ZabMsg_ru.properties
@@ -47,18 +47,18 @@ zimbraAbout = \u041e Zimbra...
 
 # Used for About Screen copyright section
 # Takes in the current year as a parameter for copyright end year value
-aboutScreenCopyright = Copyright \u00a9 2005-{0} Telligent Systems, Inc. All rights reserved. This product is \
+aboutScreenCopyright = Copyright \u00a9 2005-{0} Synacor, Inc. All rights reserved. This product is \
   protected by U.S. and international copyright and intellectual property laws.<br /><br />\
-  "Telligent" and "Zimbra" are registered trademarks or trademarks of Telligent Systems, Inc. in the United States \
+  "Synacor" and "Zimbra" are registered trademarks or trademarks of Synacor, Inc. in the United States \
   and other jurisdictions. All other marks and names mentioned herein may be trademarks of their respective \
   companies.<br /><br />\
-  Telligent Systems, Inc. d/b/a Zimbra Software, LLC<br />\
+  Synacor, Inc. d/b/a Zimbra Software, LLC<br />\
   <a href="http://www.zimbra.com" target="_blank">www.zimbra.com</a>
 
 # Used for Login/Splash Screen copyright section
 # Takes in the current year as a parameter for copyright end year value
-splashScreenCopyright = Copyright \u00a9 2005-{0} Telligent Systems, Inc. All rights reserved. Telligent and \
-  Zimbra are registered trademarks or trademarks of Telligent Systems, Inc.
+splashScreenCopyright = Copyright \u00a9 2005-{0} Synacor, Inc. All rights reserved. Synacor and \
+  Zimbra are registered trademarks or trademarks of Synacor, Inc.
 
 clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> :: \u043b\u0438\u0434\u0435\u0440 open source-\u043f\u0440\u043e\u0433\u0440\u0430\u043c\u043c \u0434\u043b\u044f \u043e\u0431\u043c\u0435\u043d\u0430 \u0441\u043e\u043e\u0431\u0449\u0435\u043d\u0438\u044f\u043c\u0438 \u0438 \u0433\u0440\u0443\u043f\u043f\u043e\u0432\u043e\u0439 \u0440\u0430\u0431\u043e\u0442\u044b :: \
     <a target="_new" href="http://blog.zimbra.com">\u0411\u043b\u043e\u0433</a> \u2014 \
