--- a/WebRoot/messages/ZabMsg_sl.properties
+++ b/WebRoot/messages/ZabMsg_sl.properties
@@ -54,18 +54,18 @@ zimbraAbout = Zimbra - vizitka
 
 # Used for About Screen copyright section
 # Takes in the current year as a parameter for copyright end year value
-aboutScreenCopyright = Avtorske pravice \u00a9 2005-{0} Telligent Systems, Inc.  Vse pravice pridr\u017eane. Ta izdelek je \
+aboutScreenCopyright = Avtorske pravice \u00a9 2005-{0} Synacor, Inc.  Vse pravice pridr\u017eane. Ta izdelek je \
   za\u0161\u010diten z zakoni o avtorskih pravicah in intelektualni lastnini v ZDA in drugih dr\u017eavah.<br /><br />\
-  \u00bbTelligent\u00ab in \u00bbZimbra\u00ab sta registrirani blagovni znamki ali blagovni znamki podjetja Telligent Systems, Inc. v ZDA \
+  \u00bbSynacor\u00ab in \u00bbZimbra\u00ab sta registrirani blagovni znamki ali blagovni znamki podjetja Synacor, Inc. v ZDA \
   in drugih dr\u017eavah. Vse ostale omenjene znamke in imena so lahko blagovne znamke njihovih \
   lastnikov.<br /><br />\
-  Telligent Systems, Inc. d/b/a Zimbra Software, LLC<br />\
+  Synacor, Inc. d/b/a Zimbra Software, LLC<br />\
   <a href="http://www.zimbra.com" target="_blank">www.zimbra.com</a>
 
 # Used for Login/Splash Screen copyright section
 # Takes in the current year as a parameter for copyright end year value
-splashScreenCopyright = Avtorske pravice \u00a9 2005-{0} Telligent Systems, Inc.  Vse pravice pridr\u017eane. Telligent in \
-  Zimbra sta registrirani blagovni znamki ali blagovni znamki podjetja Telligent Systems, Inc.
+splashScreenCopyright = Avtorske pravice \u00a9 2005-{0} Synacor, Inc.  Vse pravice pridr\u017eane. Synacor in \
+  Zimbra sta registrirani blagovni znamki ali blagovni znamki podjetja Synacor, Inc.
 
 clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> :: vodilni odprtokodni odjemalec za sporo\u010danje in sodelovanje :: \
     <a target="_new" href="http://blog.zimbra.com">Spletni dnevnik</a> - \
