--- a/WebRoot/messages/ZabMsg_th.properties
+++ b/WebRoot/messages/ZabMsg_th.properties
@@ -51,18 +51,18 @@ zimbraAbout = \u0e40\u0e01\u0e35\u0e48\u0e22\u0e27\u0e01\u0e31\u0e1a Zimbra...
 
 # Used for About Screen copyright section
 # Takes in the current year as a parameter for copyright end year value
-aboutScreenCopyright = Copyright \u00a9 2005-{0} Telligent Systems, Inc. All rights reserved. This product is \
+aboutScreenCopyright = Copyright \u00a9 2005-{0} Synacor, Inc. All rights reserved. This product is \
   protected by U.S. and international copyright and intellectual property laws.<br /><br />\
-  "Telligent" and "Zimbra" are registered trademarks or trademarks of Telligent Systems, Inc. in the United States \
+  "Synacor" and "Zimbra" are registered trademarks or trademarks of Synacor, Inc. in the United States \
   and other jurisdictions. All other marks and names mentioned herein may be trademarks of their respective \
   companies.<br /><br />\
-  Telligent Systems, Inc. d/b/a Zimbra Software, LLC<br />\
+  Synacor, Inc. d/b/a Zimbra Software, LLC<br />\
   <a href="http://www.zimbra.com" target="_blank">www.zimbra.com</a>
 
 # Used for Login/Splash Screen copyright section
 # Takes in the current year as a parameter for copyright end year value
-splashScreenCopyright = Copyright \u00a9 2005-{0} Telligent Systems, Inc. All rights reserved. Telligent and \
-  Zimbra are registered trademarks or trademarks of Telligent Systems, Inc.
+splashScreenCopyright = Copyright \u00a9 2005-{0} Synacor, Inc. All rights reserved. Synacor and \
+  Zimbra are registered trademarks or trademarks of Synacor, Inc.
 
 clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> :: \u0e1c\u0e39\u0e49\u0e19\u0e33\u0e14\u0e49\u0e32\u0e19\u0e01\u0e32\u0e23\u0e2a\u0e48\u0e07\u0e02\u0e49\u0e2d\u0e04\u0e27\u0e32\u0e21\u0e41\u0e25\u0e30\u0e01\u0e32\u0e23\u0e15\u0e34\u0e14\u0e15\u0e48\u0e2d\u0e2a\u0e37\u0e48\u0e2d\u0e2a\u0e32\u0e23\u0e01\u0e31\u0e19\u0e23\u0e30\u0e2b\u0e27\u0e48\u0e32\u0e07\u0e1a\u0e38\u0e04\u0e04\u0e25\u0e20\u0e32\u0e22\u0e43\u0e19\u0e2d\u0e07\u0e04\u0e4c\u0e01\u0e23\u0e41\u0e1a\u0e1a\u0e42\u0e2d\u0e40\u0e1e\u0e19\u0e0b\u0e2d\u0e23\u0e4c\u0e2a :: \
     <a target="_new" href="http://blog.zimbra.com">Blog</a> - \
