--- a/WebRoot/messages/ZabMsg_zh_CN.properties
+++ b/WebRoot/messages/ZabMsg_zh_CN.properties
@@ -51,18 +51,18 @@ zimbraAbout = \u5173\u4e8e Zimbra...
 
 # Used for About Screen copyright section
 # Takes in the current year as a parameter for copyright end year value
-aboutScreenCopyright = Copyright \u00a9 2005-{0} Telligent Systems, Inc. All rights reserved. This product is \
+aboutScreenCopyright = Copyright \u00a9 2005-{0} Synacor, Inc. All rights reserved. This product is \
   protected by U.S. and international copyright and intellectual property laws.<br /><br />\
-  "Telligent" and "Zimbra" are registered trademarks or trademarks of Telligent Systems, Inc. in the United States \
+  "Synacor" and "Zimbra" are registered trademarks or trademarks of Synacor, Inc. in the United States \
   and other jurisdictions. All other marks and names mentioned herein may be trademarks of their respective \
   companies.<br /><br />\
-  Telligent Systems, Inc. d/b/a Zimbra Software, LLC<br />\
+  Synacor, Inc. d/b/a Zimbra Software, LLC<br />\
   <a href="http://www.zimbra.com" target="_blank">www.zimbra.com</a>
 
 # Used for Login/Splash Screen copyright section
 # Takes in the current year as a parameter for copyright end year value
-splashScreenCopyright = Copyright \u00a9 2005-{0} Telligent Systems, Inc. All rights reserved. Telligent and \
-  Zimbra are registered trademarks or trademarks of Telligent Systems, Inc.
+splashScreenCopyright = Copyright \u00a9 2005-{0} Synacor, Inc. All rights reserved. Synacor and \
+  Zimbra are registered trademarks or trademarks of Synacor, Inc.
 
 clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> ::\u5f00\u6e90\u901a\u8baf\u548c\u534f\u4f5c\u529e\u516c\u7cfb\u7edf\u7684\u4e1a\u754c\u9886\u8896 :: \
     <a target="_new" href="http://blog.zimbra.com">\u535a\u5ba2</a> - \
