--- a/WebRoot/messages/ZabMsg_zh_TW.properties
+++ b/WebRoot/messages/ZabMsg_zh_TW.properties
@@ -51,18 +51,18 @@ zimbraAbout = \u95dc\u65bc Zimbra...
 
 # Used for About Screen copyright section
 # Takes in the current year as a parameter for copyright end year value
-aboutScreenCopyright = Copyright \u00a9 2005-{0} Telligent Systems, Inc. All rights reserved. This product is \
+aboutScreenCopyright = Copyright \u00a9 2005-{0} Synacor, Inc. All rights reserved. This product is \
   protected by U.S. and international copyright and intellectual property laws.<br /><br />\
-  "Telligent" and "Zimbra" are registered trademarks or trademarks of Telligent Systems, Inc. in the United States \
+  "Synacor" and "Zimbra" are registered trademarks or trademarks of Synacor, Inc. in the United States \
   and other jurisdictions. All other marks and names mentioned herein may be trademarks of their respective \
   companies.<br /><br />\
-  Telligent Systems, Inc. d/b/a Zimbra Software, LLC<br />\
+  Synacor, Inc. d/b/a Zimbra Software, LLC<br />\
   <a href="http://www.zimbra.com" target="_blank">www.zimbra.com</a>
 
 # Used for Login/Splash Screen copyright section
 # Takes in the current year as a parameter for copyright end year value
-splashScreenCopyright = Copyright \u00a9 2005-{0} Telligent Systems, Inc. All rights reserved. Telligent and \
-  Zimbra are registered trademarks or trademarks of Telligent Systems, Inc.
+splashScreenCopyright = Copyright \u00a9 2005-{0} Synacor, Inc. All rights reserved. Synacor and \
+  Zimbra are registered trademarks or trademarks of Synacor, Inc.
 
 clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> ::\u958b\u653e\u539f\u59cb\u78bc\u50b3\u8a0a\u53ca\u5354\u4f5c\u8fa6\u516c\u7cfb\u7d71\u7684\u696d\u754c\u9818\u5c0e\u8005 :: \
     <a target="_new" href="http://blog.zimbra.com">\u90e8\u843d\u683c</a> - \
